@@ -26,11 +26,11 @@ Package: libgnutls28-dev
 Section: libdevel
 Architecture: any
 Provides: gnutls-dev, libgnutls-openssl-dev
-Depends: libgnutls-deb0-28 (= ${binary:Version}), 
+Depends: libgnutls30 (= ${binary:Version}),
+ libgnutls-openssl27 (= ${binary:Version}),
  libgnutlsxx28 (= ${binary:Version}), 
  nettle-dev, libc6-dev | libc-dev, zlib1g-dev,
- libtasn1-6-dev, libp11-kit-dev, ${misc:Depends},
- libgnutls-openssl27 (= ${binary:Version}),
+ libtasn1-6-dev, libp11-kit-dev, ${misc:Depends}
 Suggests: gnutls-doc, gnutls-bin, guile-gnutls
 Conflicts: gnutls-dev
 Replaces: gnutls-dev
@@ -54,7 +54,7 @@ Description: GNU TLS library - development files
  .
  This package contains the GnuTLS development files.
 
-Package: libgnutls-deb0-28
+Package: libgnutls30
 Priority: standard
 Architecture: any
 # GMP >= 6 is dual-licensed GPLv2+/LGPLv2.1+. Be nice to rdeps and
@@ -84,11 +84,11 @@ Description: GNU TLS library - main runtime library
  .
  This package contains the main runtime library.
 
-Package: libgnutls28-dbg
+Package: libgnutls30-dbg
 Priority: extra
 Architecture: any
 Section: debug
-Depends: libgnutls-deb0-28 (= ${binary:Version}), ${misc:Depends}
+Depends: libgnutls30 (= ${binary:Version}), ${misc:Depends}
 Multi-Arch: same
 Description: GNU TLS library - debugger symbols
  GnuTLS is a portable library which implements the Transport Layer
@@ -179,7 +179,7 @@ Description: GNU TLS library - GNU Guile bindings
 Package: libgnutlsxx28
 Priority: extra
 Architecture: any
-Depends: libgnutls-deb0-28 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: libgnutls30 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Multi-Arch: same
 Description: GNU TLS library - C++ runtime library
@@ -204,7 +204,7 @@ Description: GNU TLS library - C++ runtime library
 Package: libgnutls-openssl27
 Priority: standard
 Architecture: any
-Depends: libgnutls-deb0-28 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: libgnutls30 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Multi-Arch: same
 Description: GNU TLS library - OpenSSL wrapper
