@@ -1,2 +1,0 @@
-debian/tmp/usr/lib/*/libgnutls-deb0.so.*
-debian/tmp/usr/share/locale/*
