@@ -30,7 +30,7 @@ override_dh_auto_configure:
 
 override_dh_makeshlibs:
 	dh_makeshlibs -p libgnutlsxx28 -V 'libgnutlsxx28 (>= 3.3.8-0)'
-	dh_makeshlibs -p libgnutls-deb0-28  -V 'libgnutls-deb0-28 (>= 3.3.8-0)' -- -c4
+	dh_makeshlibs -p libgnutls30  -V 'libgnutls30 (>= 3.4.1-0)' -- -c4
 	dh_makeshlibs -p libgnutls-openssl27 -V 'libgnutls-openssl27 (>= 3.0-0)'
 	dh_makeshlibs --remaining-packages -Xguile/2.0/guile-gnutls-v-2.so
 
@@ -86,14 +86,14 @@ override_dh_install:
 override_dh_installchangelogs:
 	dh_installchangelogs
 	rm -vrf debian/libgnutlsxx28/usr/share/doc/libgnutlsxx28
-	dh_link -plibgnutlsxx28 usr/share/doc/libgnutls-deb0-28 \
+	dh_link -plibgnutlsxx28 usr/share/doc/libgnutls30 \
 		usr/share/doc/libgnutlsxx28
 
 override_dh_compress:
 	dh_compress -X.pdf
 
 override_dh_strip:
-	dh_strip --dbg-package=libgnutls28-dbg
+	dh_strip --dbg-package=libgnutls30-dbg
 
 override_dh_auto_test:
 	dh_auto_test -O--parallel || touch dh_auto_test.fail
